<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.cupofcoffee.MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:orientation="vertical" >

        <EditText
            android:id="@+id/name_fiel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/toppings"
            android:textAllCaps="true"/>

        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/whipped_cream"
            android:textSize="16sp"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/chocolate"
            android:textSize="16sp"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/quantity"
                android:textAllCaps="true"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/decrement_button"
                    android:layout_height="48dp"
                    android:layout_width="48dp"
                    android:text="-"
                    android:onClick="decrement"/>

                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="0"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>

                <Button
                    android:id="@+id/increment_button"
                    android:layout_height="48dp"
                    android:layout_width="48dp"
                    android:text="+"
                    android:onClick="increment"/>

            </LinearLayout>

            <Button
                android:id="@+id/button_id"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/order"
                android:onClick="submitOrder"/>

    </LinearLayout>
</ScrollView>